[package]
name = "bypass"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.37.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.8"
log = "0.4"
simple_logger = "4.0"
winapi = { version = "0.3.9",features = ["heapapi","libloaderapi","memoryapi","processthreadsapi","synchapi","handleapi","errhandlingapi","winnt","minwindef","ntdef"]}